--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -27,8 +27,8 @@ steps:
       workingDirectory: $(projectRoot)
        displayName:"Install requirements"
 
- -task: ArchiveFiles@2
-  inputs:
+  task: ArchiveFiles@2
+   inputs:
   rootFolderOrFile: '$(Build.SourcesDirectory)'
      includeRootFolder: false
      archiveType: 'zip'
